# try-predacy

./: .dockerignore  .gitignore  .railway-cachebust  Anchor.toml  Dockerfile  README.md  package-lock.json  package.json  railway.toml
circuits/: test_batch_proof.js  test_claim_proof.js
circuits/batch_clearing/: batch_clearing.circom  batch_clearing.r1cs  batch_clearing.sym
circuits/claim/: claim.circom  claim.r1cs  claim.sym
circuits/setup/: batch_clearing_vkey.json  claim_final.zkey  claim_vkey.json
docs/: ARCHITECTURE.md  LIQUIDITY.md
frontend/: .env.example  package-lock.json  package.json
programs/predacy/: Cargo.toml
programs/predacy-fhe/: Cargo.toml
programs/predacy-fhe/src/: lib.rs
relayer/: .env.example  Dockerfile  package-lock.json  package.json  predacy-fhe-idl.json  predacy-idl.json
relayer/scripts/: all-processed-graphs.ts  compare-execute-graphs.ts  debug-proof.ts  full-bisect-history.ts  iterate-g2.ts  predacy-fhe-1order-probe.ts  predacy-fhe-3in4out-probe.ts  predacy-fhe-bisect.ts  predacy-fhe-cpi-demo.ts  predacy-fhe-poc-demo.ts  predacy-fhe-read-results.ts  predacy-fhe-real-cpi-demo.ts  predacy-fhe-register-demo.ts  predacy-fhe-uint8-probe.ts  probe-encrypt-activity.ts  smoke-claims.ts  smoke-e2e.ts  smoke-multi.ts  test-encrypted-clearing.ts  test-fhe-blind-lp-feasibility.ts  test-ika-fresh.ts  test-ika-orchestrator.ts  test-lp-registry.ts  test-onchain-fhe-wired.ts  test-pair-matcher.ts  test-real-zk.ts  trace-commit-source.ts  (+1 more)
scripts/: init-devnet.ts  verify-idl-address.cjs
tests/: integration.ts  tsconfig.json
(+119 files in other folders)
