[package]
name = "predacy-fhe"
version = "0.1.0"
description = "Predacy REFHE batch-clearing primitive — homomorphic 4-side uniform-price auction on Solana, built on Encrypt's REFHE coprocessor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "predacy_fhe"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"
# Encrypt REFHE pre-alpha SDK. Pulling from the upstream git repo since
# they haven't published to crates.io yet. Commit pinned for reproducibility.
# See https://github.com/dwallet-labs/encrypt-pre-alpha for the DSL reference.
encrypt-anchor = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-dsl = { package = "encrypt-solana-dsl", git = "https://github.com/dwallet-labs/encrypt-pre-alpha" }
encrypt-types = { git = "https://github.com/dwallet-labs/encrypt-pre-alpha", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
